# artcade-contracts

./: .env.example  .gitignore  COVERAGE.md  Makefile  README.md  deployments.json  foundry.toml  print_and_clean.sh  pyproject.toml  remappings.txt
script/: Deploy.s.sol
src/: Artcade.sol  Game.sol
test/: Artcade.t.sol  Game.t.sol
test/utils/: GameEIP712.sol
